--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
         <button id="btn-add-island">Add Island</button>
         <button id="btn-add-tree">Add Tree</button>
         <button id="btn-add-rock">Add Rock</button>
+        <button id="btn-remove-object">Remove Object</button> {/* New Button */}
         <p>Current Mode: <span id="current-mode-text">View</span></p>
-        <p>Instructions: Select an item to add, then Left Click to place. Islands can't overlap. Trees/Rocks place on islands.</p>
+        <p>Instructions: Select item, Left Click to place. Islands can't overlap. Trees/Rocks on islands. In Remove Mode, click an object to delete.</p>
     </div>
     <script type="module" src="js/main.js"></script>
 </body>
